Remove unnecessary link

--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
                         <a href="http://icinga.shack/icingaweb2/" class="collection-item">Monitoring RZ</a>
                         <a href="http://puppet.shack/" class="collection-item">Monitoring Puppet</a>
                         <a href="http://light.shack/service_status.html" class="collection-item">Service Status</a>
-                        <a href="http://status.shack/fitb/" class="collection-item">Netzwerkstatistik</a>
                         <a href="http://leases.shack/" class="collection-item">active dhcp leases (Find your Raspberry
                             Pi)</a>
                         <a href="http://status.shack/cgi-bin/smokeping.cgi" class="collection-item">Smokeping (Latency
                             Monitoring)</a>
-                        <a href="http://status.shack/fitb/" class="collection-item">FITB (Switchport Traffic
+                        <a href="http://status.shack/fitb/" class="collection-item">FITB - (Switchport Traffic
                             Monitoring)</a>
                         <a href="http://shack.shack/install/" class="collection-item">Installationscripte</a>
                     </div>
