--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="collection">
                         <a href="http://mpd.shack/" class="collection-item">mpd.shack</a>
                         <a href="http://light.shack/" class="collection-item">Lichtsteuerung lounge</a>
-                        <a href="http://dali.shack/" class="collection-item">Lichtsteuerung optionsrÃ¤ume</a>
+                        <a href="http://dali.shack/" class="collection-item">Lichtsteuerung optionsräume</a>
                     </div>
                 </div>
             </div>
