--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="col s4">
+        <div class="col l4 m6">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title grey-text text-darken-4">control</span>
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s4">
+        <div class="col l4 m6">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title grey-text text-darken-4">services</span>
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s4">
+        <div class="col l4 m6">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title grey-text text-darken-4">rz</span>
